--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>CovidBot19</title>
+    <title>COVIDBot19</title>
 
     <script defer src="/__/firebase/7.12.0/firebase-app.js"></script>
     <script defer src="/__/firebase/7.12.0/firebase-auth.js"></script>
@@ -14,6 +14,5 @@
   </head>
   <body>
     <p>Hi</p>
-    
   </body>
 </html>
