--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <script defer src="/__/firebase/7.12.0/firebase-messaging.js"></script>
     <script defer src="/__/firebase/7.12.0/firebase-storage.js"></script>
     <script defer src="/__/firebase/init.js"></script>
+    <script src="script.js"></script>
   </head>
   <body>
     <p>Hi</p>
