add user to firebase

--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,16 @@
     <script src="script.js"></script>
   </head>
   <body>
-    <p>Hi</p>
+    
+    <header>
+      <nav>
+        <!-- Nav Bar -->
+      </nav>
+    </header>
+
+    <div>
+      
+    </div>
+
   </body>
 </html>
