--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,8 @@
     <link rel="stylesheet" href="https://thx4sharing.web.app/index.css">
 
     <script src="https://www.gstatic.com/firebasejs/7.13.1/firebase.js"></script>
-    <script src="script.js"></script>
+    <script type= "module" src="script.js"></script>
     <script src="auth.js"></script>
-    <script type="module" src="app.js"></script>
   </head>
 
   <body>
