--- a/public/index.html
+++ b/public/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://thx4sharing.web.app/index.css">
 
     <script src="https://www.gstatic.com/firebasejs/7.13.1/firebase.js"></script>
+    <script type="text/javascript" src="discord.11.5.1.min.js"></script>
     <script src="bundle.js"></script>
     <script src="script.js"></script>
     <script src="auth.js"></script>
@@ -239,6 +240,8 @@
       </main>
     </div>
     <!--Discord Auth End-->
+
+    <!-- <button onclick="test()">Click Me</button> -->
 
   </body>
 </html>
