--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,10 @@
     <link rel="stylesheet" href="https://thx4sharing.web.app/index.css">
 
     <script src="https://www.gstatic.com/firebasejs/7.13.1/firebase.js"></script>
+    <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
+    <!-- <script src="https://greasyfork.org/scripts/29088-discord-js-for-browser/code/Discordjs%20for%20Browser.js?version=208579"></script> -->
     <script type="text/javascript" src="discord.11.5.1.min.js"></script>
-    <script src="bundle.js"></script>
+    <!-- <script src="bundle.js"></script> -->
     <script src="script.js"></script>
     <script src="auth.js"></script>
   </head>
