--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,11 @@
 
     <script src="https://www.gstatic.com/firebasejs/7.13.1/firebase.js"></script>
     <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
+    <script src="https://github.com/protobufjs/protobuf.js/blob/master/dist/minimal/protobuf.min.js"></script>
     <script type="text/javascript" src="discord.11.5.1.min.js"></script>
     <script src="discord.io.js"></script>
     <script src="script.js"></script>
+    <script src="apirequest.js"></script>
     <script src="auth.js"></script>
   </head>
 
