--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <script src="https://www.gstatic.com/firebasejs/7.13.1/firebase.js"></script>
     <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
     <script type="text/javascript" src="discord.11.5.1.min.js"></script>
-    <script src="discord.io.js"></script>
+    <!-- <script src="discord.io.js"></script> -->
     <script src="script.js"></script>
     <script src="apirequest.js"></script>
     <script src="auth.js"></script>
