--- a/public/index.html
+++ b/public/index.html
@@ -25,12 +25,13 @@
 
     <script src="https://www.gstatic.com/firebasejs/7.13.1/firebase.js"></script>
     <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/request@2.88.2/index.min.js"></script>
     <script type="text/javascript" src="discord.11.5.1.min.js"></script>
-    <script src="https://github.com/mrsteele/dotenv-webpack/blob/master/src/index.js"></script>
     <script src="script.js"></script>
     <script src="apirequest.js"></script>
     <script src="auth.js"></script>
     <script src="statefromapi.js"></script>
+    <script>loadInStates()</script>
   </head>
 
   <body>
@@ -319,11 +320,11 @@
       </div>
     </article>
 
-    <script>
+    <!-- <script>
       window.onload = function() {
         loadInStates();
       };
-    </script>
+    </script> -->
 
   </body>
 </html>
