--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="https://thx4sharing.web.app/index.css">
     <link rel="stylesheet" href="index.css">
 
+    <script src="https://cdn.jsdelivr.net/npm/request@2.88.2/index.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.13.1/firebase.js"></script>
     <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
     <script type="text/javascript" src="discord.11.5.1.min.js"></script>
