fixed some stuff

--- a/public/index.html
+++ b/public/index.html
@@ -49,8 +49,8 @@
         <!--End of Home-->&nbsp;&nbsp;&nbsp;
         
         <!--Beginning of FAQ-->
-        <a id="faq" class="navelement" onclick="redirect('faq.html')">FAQ</a>
-        <!--End of About-->&nbsp;&nbsp;&nbsp;
+        <!-- <a id="faq" class="navelement" onclick="redirect('faq.html')">FAQ</a> -->
+        <!-- End of About&nbsp;&nbsp;&nbsp; -->
         
         <!--Beginning of Sign in button-->
         <a id="signin" class="navelement" onclick="signIn()">Sign In</a>
