stuff, many stuffs

--- a/public/index.html
+++ b/public/index.html
@@ -15,9 +15,10 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" SameSite="none">
-    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://thx4sharing.web.app/main.css">
     <link rel="stylesheet" href="https://thx4sharing.web.app/index.css">
+    <link rel="stylesheet" href="index.css">
+
 
     <!--
     <script src="statefromapi.js"></script>
@@ -33,8 +34,8 @@
     <!-- <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script> -->
     <script type="text/javascript" src="discord.11.5.1.min.js"></script>
     <script src="script.js"></script>
-    <script src="apirequest.js"></script>
     <script src="auth.js"></script>
+    <script src="apirequest.js"></script>
   </head>
 
   <body>
@@ -308,8 +309,8 @@
             <span class="input-group-text list-group-item list-group-item-primary" id="basic-addon1">United States</span>
           </div>
           <ul class="list-group list-group-horizontal">
-            <li class="list-group-item">Cases: </li>
-            <li class="list-group-item">Deaths: </li>
+            <li id="USCases" class="list-group-item">Cases: </li>
+            <li id="USDeaths" class="list-group-item">Deaths: </li>
           </ul>
         </div>
 
