--- a/public/index.html
+++ b/public/index.html
@@ -302,7 +302,7 @@
     </div>
 
     <article>
-      <div style="margin-left: 10%; margin-top: 8%;">
+      <div style="margin-left: 10%; margin-top: 5%;">
 
         <div class="input-group mb-3">
           <div class="input-group-prepend">
@@ -392,7 +392,11 @@
 
         </div>
 
-        <p id="dataResult"></p>
+        <ul id="dataResults" class="list-group" style="width: 15%;">
+          <li id="location" class="list-group-item active"></li>
+          <li id="resultsCases" class="list-group-item">Case: </li>
+          <li id="resultsDeaths" class="list-group-item">Deaths: </li>
+        </ul>
       </div>
     </article>
 
