--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" crossorigin="anonymous"></script>
     <script src="https://kit.fontawesome.com/c54efb68d5.js" SameSite="none" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.orange-indigo.min.css">
@@ -27,15 +25,16 @@
         states();
       };
     </script>
+    <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script>
     -->
 
     <script src="https://cdn.jsdelivr.net/npm/request@2.88.2/index.min.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.13.1/firebase.js"></script>
-    <!-- <script src="https://requirejs.org/docs/release/2.3.5/minified/require.js"></script> -->
     <script type="text/javascript" src="discord.11.5.1.min.js"></script>
     <script src="script.js"></script>
     <script src="auth.js"></script>
     <script src="apirequest.js"></script>
+    <script src="caching.js"></script>
   </head>
 
   <body>
