--- a/public/index.html
+++ b/public/index.html
@@ -45,6 +45,10 @@
         <!--Beginning of Home-->
         <a id="home" class="navelement" onclick="redirect('index.html')">Home</a>
         <!--End of Home-->&nbsp;&nbsp;&nbsp;
+
+        <!--Beginning of Home-->
+        <a id="home" class="navelement" onclick="redirect('bot.html')">Discord</a>
+        <!--End of Home-->&nbsp;&nbsp;&nbsp;
         
         <!--Beginning of FAQ-->
         <!-- <a id="faq" class="navelement" onclick="redirect('faq.html')">FAQ</a> -->
@@ -284,7 +288,7 @@
     </div>
     <!--Discord Auth End-->
 
-    <div id="toast" class="toast" style="position: absolute; z-index: 5; margin-top: 3%; right: 0;" data-delay="8000">
+    <div id="toast" class="toast" style="position: absolute; z-index: 5; margin-top: 3%; right: 0;" data-autohide="false" data-delay="8000">
       <div class="toast-header">
         <i class="fas fa-virus fa-3x"></i>
         <strong class="mr-auto">&nbsp;&nbsp;CovidBot19</strong>
@@ -294,7 +298,7 @@
         </button>
       </div>
       <div class="toast-body">
-        Hey! Don't forget to wash your hands!&nbsp;&nbsp;<i class="fas fa-hands-wash fa-2x"></i>
+        Hey! Want a Discord bot for Coronavirus?!<br><a id="notifClick" onclick="redirect('bot.html')">Click here!</a>
       </div>
     </div>
 
