--- a/public/user.html
+++ b/public/user.html
@@ -284,8 +284,7 @@
                             id="AemailSubmit" name="dAuthEmailSubmit" onclick="discordAuth()">Submit</button>
                         &nbsp;&nbsp;&nbsp;
                         <button class="mdl-button mdl-js-button mdl-button--raised" name="dAuthSignIn"
-                            onclick="display('discordAuth'); signIn()">Return
-                            to Sign In</button>
+                            onclick="display('discordAuth'); signIn()">Return to Sign In</button>
 
                         <p>
                             <li>
