--- a/public/bot.html
+++ b/public/bot.html
@@ -329,7 +329,7 @@
                         <h5 class="card-title">Add our Discord Bot to your server!</h5>
                         <p class="card-text">Use this bot to track cases right in the comfort of your server! With more features rolling out every day, there's no reason not to add it!</p>
                         <br><br>
-                        <button class="btn btn-primary" style="background-color: tomato; border-color: tomato; margin-left: 1%;" src="https://discordapp.com/api/oauth2/authorize?client_id=692117206108209253&permissions=117760&redirect_uri=https%3A%2F%2Fcovid19bot.web.app&scope=bot">Add to your server</button>
+                        <button class="btn btn-primary" style="background-color: tomato; border-color: tomato; margin-left: 1%;" onclick="window.open('https://discordapp.com/api/oauth2/authorize?client_id=695830124402311180&permissions=125952&scope=bot')">Add to your server</button>
                     </div>
                 </div>
             </div>
@@ -346,7 +346,7 @@
                         <p class="card-text">Promotion: If you can get THREE friends to join the server, we'll promote your own stuff on multiple servers!</p>
                         <br>
                         <button class="btn btn-primary" style="background-color: tomato; border-color: tomato; margin-left: 1%;"
-                            src="https://discord.gg/Cg7E8ms">Join our Discord server</button>
+                            onclick="window.open('https://discord.gg/Cg7E8ms')">Join our Discord server</button>
                     </div>
                 </div>
             </div>
