--- a/public/index.html
+++ b/public/index.html
@@ -406,6 +406,8 @@
           <li id="resultsCases" class="list-group-item">Cases</li>
           <li id="resultsDeaths" class="list-group-item">Deaths</li>
         </ul>
+
+        <img id="graph" style="margin-top: 1%; width: 100%;">
       </div>
     </article>
 
