--- a/public/index.html
+++ b/public/index.html
@@ -405,6 +405,7 @@
           <li id="location" class="list-group-item active">Location</li>
           <li id="resultsCases" class="list-group-item">Cases</li>
           <li id="resultsDeaths" class="list-group-item">Deaths</li>
+          <li id="resultsDeathRate" class="list-group-item">Death Rate</li>
         </ul>
 
         <img id="graph" style="margin-top: 1%; width: 100%;">
