--- a/public/discord.html
+++ b/public/discord.html
@@ -1,15 +1,15 @@
-<div class="card mb-3" style="max-width: 50%; margin-left: 23%; margin-top: 1.5%; background-color: brown; color: white; padding: 1%;">
+<div class="card mb-3" style="max-width: 50%; margin-left: 24.5%; background-color: brown; color: white; padding: 1%;">
     <div class="row no-gutters">
         <div class="col-md-4">
             <img src="favicon.ico" class="card-img" alt="...">
         </div>
         <div class="col-md-8">
             <div class="card-body">
-                <h5 class="card-title">Add our Discord Bot to your server!</h5>
-                <p class="card-text">Use this bot to track cases right in the comfort of your server! With more features
-                    rolling out every day, there's no reason not to add it!</p>
+                <h1 class="card-title">Add our Discord Bot to your server!</h1>
+                <p class="card-text" style="font-size: 20px">Use this bot to track cases right in the comfort of your server! With more features
+                    rolling out all the time, there's no reason not to add it!</p>
                 <br><br>
-                <button class="btn btn-primary" style="background-color: tomato; border-color: tomato; margin-left: 1%;"
+                <button class="btn btn-primary" style="background-color: tomato; border-color: tomato; margin-left: 1%; font-size: 20px;"
                     onclick="window.open('https://discordapp.com/api/oauth2/authorize?client_id=692117206108209253&permissions=125952&redirect_uri=https%3A%2F%2Fcovid19bot.web.app&scope=bot')">
                     Add to your server</button>
             </div>
@@ -17,20 +17,20 @@
     </div>
 </div>
 
-<div class="card mb-3" style="max-width: 50%; margin-left: 23%; margin-top: 2%; background-color: brown; color: white; padding: 1%;">
+<div class="card mb-3" style="max-width: 50%; margin-left: 24.5%; margin-top: 2.5%; background-color: brown; color: white; padding: 1%;">
     <div class="row no-gutters">
         <div class="col-md-4">
             <img src="discord_logo.png" class="card-img" alt="...">
         </div>
         <div class="col-md-8">
             <div class="card-body">
-                <h5 class="card-title">Join our Discord server!</h5>
-                <p class="card-text">Are you a developer? Want to learn more about this site? Need help? Or do you just
+                <h1 class="card-title">Join our Discord server!</h1>
+                <p class="card-text" style="font-size: 20px">Are you a developer? Want to learn more about this site? Need help? Or do you just
                     want to talk about coronavirus? Join our server!</p>
-                <p class="card-text">Promotion: If you can get THREE friends to join the server, we'll promote your own
+                <p class="card-text" style="font-size: 20px">Promotion: If you can get THREE friends to join the server, we'll promote your own
                     stuff on multiple servers!</p>
                 <br>
-                <button class="btn btn-primary" style="background-color: tomato; border-color: tomato; margin-left: 1%;"
+                <button class="btn btn-primary" style="background-color: tomato; border-color: tomato; margin-left: 1%; font-size: 20px;"
                     onclick="window.open('https://discord.gg/Cg7E8ms')">Join our Discord server</button>
             </div>
         </div>
