further changes to discord page

--- a/public/discord.html
+++ b/public/discord.html
@@ -24,7 +24,7 @@
         </div>
         <div class="col-md-8">
             <div class="card-body">
-                <h1 class="card-title">Join our Discord server!</h1>
+                <h1 class="card-title" style="margin-top: 0px;">Join our Discord server!</h1>
                 <p class="card-text" style="font-size: 20px">Are you a developer? Want to learn more about this site? Need help? Or do you just
                     want to talk about coronavirus? Join our server!</p>
                 <p class="card-text" style="font-size: 20px">Promotion: If you can get THREE friends to join the server, we'll promote your own
