website redesigns, added country graph

--- a/public/discordToast.html
+++ b/public/discordToast.html
@@ -1,4 +1,4 @@
-<div id="toast" class="toast" style="position: absolute; z-index: 5; margin-top: 0%; right: 0;" data-autohide="false" data-delay="8000">
+<div id="toast" class="toast" style="position: absolute; z-index: 5; top: 10%; right: 0;" data-autohide="false" data-delay="8000">
     <div class="toast-header">
         <i class="fas fa-virus fa-3x"></i>
         <strong class="mr-auto">&nbsp;&nbsp;CovidBot19</strong>
