--- a/public/data.html
+++ b/public/data.html
@@ -1,109 +1,112 @@
-<div
-    style="width: 50%; margin-left: 10%; margin-top: 5%; padding: 1.5%; padding-left: 2%; background-color: #6E797E; border-radius: 25px; border: 2px solid rgb(106, 115, 119)">
+<div style="width: 80%; height: 60%; margin-left: 8%; margin-top: 4%; padding: 1.5%; padding-left: 2%; background-color: #c22f2f; border-radius: 25px; border: 2px solid #dd0000;">
 
-    <div class="input-group mb-3">
-        <div class="input-group-prepend">
-            <span class="input-group-text list-group-item list-group-item-primary" id="basic-addon1">United
-                States</span>
-        </div>
-        <ul class="list-group list-group-horizontal">
-            <li id="USCases" class="list-group-item">Cases:
-                <div class="spinner-border spinner-border-sm" role="status">
-                    <span class="sr-only">Loading...</span>
+    <div style="display: flex; flex-direction: row;">
+        <div style="display: flex; flex-direction: column; justify-items: space-around;">
+            <div class="input-group mb-3">
+                <div class="input-group-prepend">
+                    <span class="input-group-text list-group-item list-group-item-primary" id="basic-addon1" style="font-size: large;" onclick="countryCases()">United States</span>
                 </div>
-            </li>
-            <li id="USDeaths" class="list-group-item">Deaths:
-                <div class="spinner-border spinner-border-sm" role="status">
-                    <span class="sr-only">Loading...</span>
+                <ul class="list-group list-group-horizontal">
+                    <li id="USCases" class="list-group-item" style="font-size: large; padding-top: 4.5%;">Cases:
+                        <div class="spinner-border spinner-border-sm" role="status">
+                            <span class="sr-only">Loading...</span>
+                        </div>
+                    </li>
+                    <li id="USDeaths" class="list-group-item" style="font-size: large; padding-top: 4.5%;">Deaths:
+                        <div class="spinner-border spinner-border-sm" role="status">
+                            <span class="sr-only">Loading...</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+
+            <div class="form-group" style="margin-top: 2%;">
+
+                <div class="input-group mb-3 state-county" style="width: 100%;">
+                    <div class="input-group-prepend">
+                        <label class="input-group-text" for="state" style="font-size: x-large;">State</label>
+                    </div>
+                    <select class="form-control custom-select" id="state" name="state" style="font-size: x-large;">
+                        <option value="">N/A</option>
+                        <option value="AK">Alaska</option>
+                        <option value="AL">Alabama</option>
+                        <option value="AR">Arkansas</option>
+                        <option value="AZ">Arizona</option>
+                        <option value="CA">California</option>
+                        <option value="CO">Colorado</option>
+                        <option value="CT">Connecticut</option>
+                        <option value="DC">District of Columbia</option>
+                        <option value="DE">Delaware</option>
+                        <option value="FL">Florida</option>
+                        <option value="GA">Georgia</option>
+                        <option value="HI">Hawaii</option>
+                        <option value="IA">Iowa</option>
+                        <option value="ID">Idaho</option>
+                        <option value="IL">Illinois</option>
+                        <option value="IN">Indiana</option>
+                        <option value="KS">Kansas</option>
+                        <option value="KY">Kentucky</option>
+                        <option value="LA">Louisiana</option>
+                        <option value="MA">Massachusetts</option>
+                        <option value="MD">Maryland</option>
+                        <option value="ME">Maine</option>
+                        <option value="MI">Michigan</option>
+                        <option value="MN">Minnesota</option>
+                        <option value="MO">Missouri</option>
+                        <option value="MS">Mississippi</option>
+                        <option value="MT">Montana</option>
+                        <option value="NC">North Carolina</option>
+                        <option value="ND">North Dakota</option>
+                        <option value="NE">Nebraska</option>
+                        <option value="NH">New Hampshire</option>
+                        <option value="NJ">New Jersey</option>
+                        <option value="NM">New Mexico</option>
+                        <option value="NV">Nevada</option>
+                        <option value="NY">New York</option>
+                        <option value="OH">Ohio</option>
+                        <option value="OK">Oklahoma</option>
+                        <option value="OR">Oregon</option>
+                        <option value="PA">Pennsylvania</option>
+                        <option value="RI">Rhode Island</option>
+                        <option value="SC">South Carolina</option>
+                        <option value="SD">South Dakota</option>
+                        <option value="TN">Tennessee</option>
+                        <option value="TX">Texas</option>
+                        <option value="UT">Utah</option>
+                        <option value="VA">Virginia</option>
+                        <option value="VT">Vermont</option>
+                        <option value="WA">Washington</option>
+                        <option value="WI">Wisconsin</option>
+                        <option value="WV">West Virginia</option>
+                        <option value="WY">Wyoming</option>
+                    </select>
                 </div>
-            </li>
-        </ul>
+
+                <div class="input-group mb-3 state-county" style="width: 100%; margin-top: 5%;">
+                    <div class="input-group-prepend">
+                        <span class="input-group-text" id="basic-addon2" style="font-size: x-large;">County</span>
+                    </div>
+                    <input type="text" class="form-control" id="county" placeholder="Optional" aria-label="County" aria-describedby="basic-addon2" style="font-size: x-large;">
+                </div>
+
+                <div class="form-group row">
+                    <div class="col-sm-10">
+                        <button type="submit" class="btn btn-primary" onclick="cases()" style="font-size: x-large; margin-top: 2%;">Get Data</button>
+                    </div>
+                </div>
+
+            </div>
+
+            <ul id="dataResults" class="list-group" style="width: 100%;">
+                <li id="location" class="list-group-item active" style="font-size: x-large;">Location</li>
+                <li id="resultsCases" class="list-group-item" style="font-size: x-large;">Cases</li>
+                <li id="resultsDeaths" class="list-group-item" style="font-size: x-large;">Deaths</li>
+                <li id="resultsDeathRate" class="list-group-item" style="font-size: x-large;">Death Rate</li>
+            </ul>
+        </div>
+
+        <div style="width: 60%; margin-top: 1%; margin-left: 5%;">
+            <img id="graph" style="width: 100%; height: 100%; border: 2px solid rgba(32, 32, 32, 0.575);">
+        </div>
     </div>
-
-    <div class="form-group">
-
-        <div class="input-group mb-3 state-county">
-            <div class="input-group-prepend">
-                <label class="input-group-text" for="state">State</label>
-            </div>
-            <select class="form-control custom-select" id="state" name="state">
-                <option value="">N/A</option>
-                <option value="AK">Alaska</option>
-                <option value="AL">Alabama</option>
-                <option value="AR">Arkansas</option>
-                <option value="AZ">Arizona</option>
-                <option value="CA">California</option>
-                <option value="CO">Colorado</option>
-                <option value="CT">Connecticut</option>
-                <option value="DC">District of Columbia</option>
-                <option value="DE">Delaware</option>
-                <option value="FL">Florida</option>
-                <option value="GA">Georgia</option>
-                <option value="HI">Hawaii</option>
-                <option value="IA">Iowa</option>
-                <option value="ID">Idaho</option>
-                <option value="IL">Illinois</option>
-                <option value="IN">Indiana</option>
-                <option value="KS">Kansas</option>
-                <option value="KY">Kentucky</option>
-                <option value="LA">Louisiana</option>
-                <option value="MA">Massachusetts</option>
-                <option value="MD">Maryland</option>
-                <option value="ME">Maine</option>
-                <option value="MI">Michigan</option>
-                <option value="MN">Minnesota</option>
-                <option value="MO">Missouri</option>
-                <option value="MS">Mississippi</option>
-                <option value="MT">Montana</option>
-                <option value="NC">North Carolina</option>
-                <option value="ND">North Dakota</option>
-                <option value="NE">Nebraska</option>
-                <option value="NH">New Hampshire</option>
-                <option value="NJ">New Jersey</option>
-                <option value="NM">New Mexico</option>
-                <option value="NV">Nevada</option>
-                <option value="NY">New York</option>
-                <option value="OH">Ohio</option>
-                <option value="OK">Oklahoma</option>
-                <option value="OR">Oregon</option>
-                <option value="PA">Pennsylvania</option>
-                <option value="RI">Rhode Island</option>
-                <option value="SC">South Carolina</option>
-                <option value="SD">South Dakota</option>
-                <option value="TN">Tennessee</option>
-                <option value="TX">Texas</option>
-                <option value="UT">Utah</option>
-                <option value="VA">Virginia</option>
-                <option value="VT">Vermont</option>
-                <option value="WA">Washington</option>
-                <option value="WI">Wisconsin</option>
-                <option value="WV">West Virginia</option>
-                <option value="WY">Wyoming</option>
-            </select>
-        </div>
-
-        <div class="input-group mb-3 state-county">
-            <div class="input-group-prepend">
-                <span class="input-group-text" id="basic-addon2">County</span>
-            </div>
-            <input type="text" class="form-control" id="county" placeholder="Optional" aria-label="County"
-                aria-describedby="basic-addon2">
-        </div>
-
-        <div class="form-group row">
-            <div class="col-sm-10">
-                <button type="submit" class="btn btn-primary" onclick="cases()">Get Data</button>
-            </div>
-        </div>
-
-    </div>
-
-    <ul id="dataResults" class="list-group" style="width: 30%;">
-        <li id="location" class="list-group-item active">Location</li>
-        <li id="resultsCases" class="list-group-item">Cases</li>
-        <li id="resultsDeaths" class="list-group-item">Deaths</li>
-        <li id="resultsDeathRate" class="list-group-item">Death Rate</li>
-    </ul>
-
-    <img id="graph" style="margin-top: 1%; width: 100%;">
 </div>
