--- a/public/index.html
+++ b/public/index.html
@@ -30,8 +30,18 @@
 
 <body style="background-image: url('background.png'); background-repeat: no-repeat; background-size: 100% 100%;">
   <nav style="display: flex; flex-direction: row-reverse; margin-right: 3.5%">
-    <button class="button" id="signin" onclick="signIn()">Sign In</button>
-    <button class="title" style="margin-right: 80%; color: white;" onclick="redirect('homepage')">CovidBot19</button>
+    <div class="btn-group">
+      <button type="button" class="btn btn-danger dropdown-toggle button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Menu</button>
+      <div class="dropdown-menu">
+        <a class="dropdown-item" onclick="redirect('homepage')">Home</a>
+        <a class="dropdown-item" onclick="redirect('data')">Data Dashboard</a>
+        <a class="dropdown-item" onclick="redirect('discord')">Discord</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" id="signin" onclick="signIn()">Sign In</a>
+      </div>
+    </div>
+
+    <button class="title" style="margin-right: 68%; margin-left: 3%; color: white;" onclick="redirect('homepage')">CovidBot19</button>
   </nav>
 
   <div id="auth-wrapper">
