--- a/public/homepage.html
+++ b/public/homepage.html
@@ -10,7 +10,7 @@
 
         <div style="display: flex; flex-direction: column; justify-content: center; text-align: center; margin-left: 7%; margin-right: 7%;">
 
-            <h1 style="font-size: 30px; color: rgb(199, 199, 199); margin-bottom: 5%; font-family: 'Overpass-Regular', sans-serif">
+            <h1 style="font-size: 30px; color: rgb(199, 199, 199); margin-bottom: 5%; font-family: 'Overpass-Overpass-Semibold', sans-serif;">
                 With hourly data updates, county-level data, and lots of information, we've got everything you need!
             </h1>
 
