--- a/public/data-landscape.html
+++ b/public/data-landscape.html
@@ -12,7 +12,7 @@
                             <span class="sr-only">Loading...</span>
                         </div>
                     </li>
-                    <li id="USDeaths" class="list-group-item" style="font-size: large; padding-top: 4.5%;;">Deaths:
+                    <li id="USDeaths" class="list-group-item" style="font-size: large; padding-top: 4.5%;">Deaths:
                         <div class="spinner-border spinner-border-sm" role="status">
                             <span class="sr-only">Loading...</span>
                         </div>
