fixed navbar (i was lazy earlier and my logic failed)

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
     </div>
   </nav>
 
-  <nav id="navbar-portrait" style="display: flex; flex-direction: column; display: none;">
+  <nav id="navbar-portrait" style="display: none; flex-direction: column;">
     <div style="display: flex; justify-content: center">
       <button class="title title-portrait" style="color: white;" onclick="redirect('homepage')">CovidBot19</button>
     </div>
