--- a/public/data-portrait.html
+++ b/public/data-portrait.html
@@ -1,18 +1,18 @@
-<div style="width: 80%; height: 60%; margin-left: 8%; margin-top: 4%; padding: 1.5%; padding-left: 2%; background-color: #c22f2f; border-radius: 25px; border: 2px solid #dd0000;">
+<div style="width: 90%; height: 60rem; margin-left: 5%; margin-right: 5%; margin-top: 4%; padding: 1.5%; padding-left: 2%; background-color: #c22f2f; border-radius: 25px; border: 2px solid #dd0000;">
 
-    <div style="display: flex; flex-direction: row;">
+    <div style="display: flex; flex-direction: column;">
         <div style="display: flex; flex-direction: column; justify-items: space-around;">
             <div class="input-group mb-3">
                 <div class="input-group-prepend">
-                    <span class="input-group-text list-group-item list-group-item-primary" id="basic-addon1" style="font-size: large; background-color: #007BFF; color: white;" onclick="countryCases()">United States</span>
+                    <span class="input-group-text list-group-item list-group-item-primary" id="basic-addon1" style="font-size: medium; background-color: #007BFF; color: white;" onclick="countryCases()">United States</span>
                 </div>
                 <ul class="list-group list-group-horizontal">
-                    <li id="USCases" class="list-group-item" style="font-size: large; padding-top: 4.5%;">Cases:
+                    <li id="USCases" class="list-group-item" style="font-size: medium; padding-top: 4.5%;">Cases:
                         <div class="spinner-border spinner-border-sm" role="status">
                             <span class="sr-only">Loading...</span>
                         </div>
                     </li>
-                    <li id="USDeaths" class="list-group-item" style="font-size: large; padding-top: 4.5%;">Deaths:
+                    <li id="USDeaths" class="list-group-item" style="font-size: medium; padding-top: 4.5%;">Deaths:
                         <div class="spinner-border spinner-border-sm" role="status">
                             <span class="sr-only">Loading...</span>
                         </div>
@@ -20,13 +20,13 @@
                 </ul>
             </div>
 
-            <div class="form-group" style="margin-top: 2%;">
+            <div class="form-group" style="margin-top: 0.5%;">
 
                 <div class="input-group mb-3 state-county" style="width: 100%;">
                     <div class="input-group-prepend">
-                        <label class="input-group-text" for="state" style="font-size: x-large;">State</label>
+                        <label class="input-group-text" for="state" style="font-size: medium;">State</label>
                     </div>
-                    <select class="form-control custom-select" id="state" name="state" style="font-size: x-large;">
+                    <select class="form-control custom-select" id="state" name="state" style="font-size: medium;">
                         <option value="">N/A</option>
                         <option value="AK">Alaska</option>
                         <option value="AL">Alabama</option>
@@ -82,31 +82,31 @@
                     </select>
                 </div>
 
-                <div class="input-group mb-3 state-county" style="width: 100%; margin-top: 5%;">
+                <div class="input-group mb-3 state-county" style="width: 100%; margin-top: 1%;">
                     <div class="input-group-prepend">
-                        <span class="input-group-text" id="basic-addon2" style="font-size: x-large;">County</span>
+                        <span class="input-group-text" id="basic-addon2" style="font-size: medium;">County</span>
                     </div>
-                    <input type="text" class="form-control" id="county" placeholder="Optional" aria-label="County" aria-describedby="basic-addon2" style="font-size: x-large;">
+                    <input type="text" class="form-control" id="county" placeholder="Optional" aria-label="County" aria-describedby="basic-addon2" style="font-size: medium;">
                 </div>
 
                 <div class="form-group row">
                     <div class="col-sm-10">
-                        <button type="submit" class="btn btn-primary" onclick="cases()" style="font-size: x-large; margin-top: 2%; background-color: rgba(253, 54, 54, 0.84); border-color: #dd0000;">Get Data</button>
+                        <button type="submit" class="btn btn-primary" onclick="cases()" style="font-size: medium; background-color: rgba(253, 54, 54, 0.84); border-color: #dd0000;">Get Data</button>
                     </div>
                 </div>
 
             </div>
 
-            <ul id="dataResults" class="list-group" style="width: 100%;">
-                <li id="location" class="list-group-item active" style="font-size: x-large; background-color: rgba(253, 54, 54, 0.84); border-color: rgba(253, 54, 54, 0.84);">Location</li>
-                <li id="resultsCases" class="list-group-item" style="font-size: x-large;">Cases</li>
-                <li id="resultsDeaths" class="list-group-item" style="font-size: x-large;">Deaths</li>
-                <li id="resultsDeathRate" class="list-group-item" style="font-size: x-large;">Death Rate</li>
+            <ul id="dataResults" class="list-group" style="width: 50%; margin-top: -2.5%;">
+                <li id="location" class="list-group-item active" style="font-size: medium; background-color: rgba(253, 54, 54, 0.84); border-color: rgba(253, 54, 54, 0.84);">Location</li>
+                <li id="resultsCases" class="list-group-item" style="font-size: medium;">Cases</li>
+                <li id="resultsDeaths" class="list-group-item" style="font-size: medium;">Deaths</li>
+                <li id="resultsDeathRate" class="list-group-item" style="font-size: medium;">Death Rate</li>
             </ul>
         </div>
 
-        <div style="width: 60%; margin-top: 1%; margin-left: 5%;">
-            <img id="graph" style="width: 100%; height: 100%; border: 2px solid rgba(32, 32, 32, 0.575);">
+        <div style="width: 95%; height: 21rem; margin-top: 3.5%; margin-left: 2.5%; margin-right: 2.5%;">
+            <img id="graph" style="width: 100%; border: 2px solid rgba(32, 32, 32, 0.575);">
         </div>
     </div>
 </div>
