usability > beauty ig

--- a/public/discord-portrait.html
+++ b/public/discord-portrait.html
@@ -1,38 +1,49 @@
-<div class="card mb-3" style="max-width: 50%; margin-left: 24.5%; background-color: brown; color: white; padding: 1%;">
+<div class="card mb-3" style="max-width: 90%; margin-left: 5%; margin-right: 5%; margin-top: 5%; background-color: brown; color: white; padding: 1%;">
     <div class="row no-gutters">
         <div class="col-md-4">
-            <img src="favicon.ico" class="card-img" alt="...">
+            <img src="favicon.ico" class="card-img" alt="..." style="width: 50%; margin-left: 23%;">
         </div>
         <div class="col-md-8">
             <div class="card-body">
-                <h1 class="card-title">Add our Discord Bot to your server!</h1>
-                <p class="card-text" style="font-size: 20px">Use this bot to track cases right in the comfort of your server! With more features
+                <h1 class="card-title" style="font-size: 25px">Add our Discord Bot to your server!</h1>
+                <p class="card-text" style="font-size: 18px">Use this bot to track cases right in the comfort of your server! With more features
                     rolling out all the time, there's no reason not to add it!</p>
                 <br><br>
                 <button class="btn btn-primary" style="background-color: tomato; border-color: tomato; margin-left: 1%; font-size: 20px;"
                     onclick="window.open('https://discordapp.com/api/oauth2/authorize?client_id=692117206108209253&permissions=125952&redirect_uri=https%3A%2F%2Fcovid19bot.web.app&scope=bot')">
-                    Add to your server</button>
+                    Add to your server
+                </button>
             </div>
         </div>
     </div>
 </div>
 
-<div class="card mb-3" style="max-width: 50%; margin-left: 24.5%; margin-top: 2.5%; background-color: brown; color: white; padding: 1%;">
+<div class="card mb-3" style="max-width: 90%; margin-left: 5%; margin-right: 5%; margin-top: 5%; background-color: brown; color: white; padding: 1%;">
     <div class="row no-gutters">
         <div class="col-md-4">
-            <img src="discord_logo.png" class="card-img" alt="...">
+            <img src="discord_logo.png" class="card-img" alt="..." style="width: 50%; margin-left: 23%;">
         </div>
         <div class="col-md-8">
             <div class="card-body">
-                <h1 class="card-title" style="margin-top: 0px;">Join our Discord server!</h1>
-                <p class="card-text" style="font-size: 20px">Are you a developer? Want to learn more about this site? Need help? Or do you just
+                <h1 class="card-title" style="margin-top: 0px; font-size: 25px">Join our Discord server!</h1>
+                <p class="card-text" style="font-size: 18px">Are you a developer? Want to learn more about this site? Need help? Or do you just
                     want to talk about coronavirus? Join our server!</p>
-                <p class="card-text" style="font-size: 20px">Promotion: If you can get THREE friends to join the server, we'll promote your own
-                    stuff on multiple servers!</p>
-                <br>
                 <button class="btn btn-primary" style="background-color: tomato; border-color: tomato; margin-left: 1%; font-size: 20px;"
-                    onclick="window.open('https://discord.gg/Cg7E8ms')">Join our Discord server</button>
+                onclick="window.open('https://discord.gg/Cg7E8ms')">Join our Discord server</button>
             </div>
         </div>
     </div>
 </div>
+
+<style>
+    * {
+        overflow-y: visible !important;
+    }
+    html {
+        overflow-y: visible;
+    }
+    body {
+      background-image: url('background-portrait.png');
+      background-size: cover;
+    }
+</style>
