--- a/public/index.html
+++ b/public/index.html
@@ -7,16 +7,11 @@
   <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.min.js" crossorigin="anonymous"></script>
   <script src="https://kit.fontawesome.com/c54efb68d5.js" SameSite="none" crossorigin="anonymous"></script>
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
-    integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
-    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
   <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.orange-indigo.min.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
-    integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css" SameSite="none">
 
@@ -45,12 +40,8 @@
   </nav>
 
   <nav id="navbar-portrait" style="flex-direction: column;">
-    <div style="display: flex; justify-content: center">
-      <button class="title title-portrait" style="color: white;" onclick="redirect('homepage')">KovidBot19</button>
-    </div>
-
     <div style="display: flex; justify-content: center;">
-      <div class="btn-group" style="width: 30%;">
+      <div class="btn-group" style="width: 80%;">
         <button type="button" class="btn btn-danger dropdown-toggle button portrait-menu-button"data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Menu</button>
         <div class="dropdown-menu">
           <a class="dropdown-item" onclick="redirect('homepage')">Home</a>
@@ -90,7 +81,7 @@
     background-image: url('background.png');
     background-repeat: no-repeat;
     background-size: cover;
-    overflow-y: hidden;
+    overflow-y: hidden; 
     height: 100%;
   }
 
@@ -101,24 +92,27 @@
     #navbar-portrait {
       display: flex;
     }
-    html {
-      overflow-x: hidden;
-      overflow-y: visible;
-    }
     body {
       background-image: url('background-portrait.png');
       background-size: cover;
-      overflow-x: visible;
-      overflow-y: visible;
+    }
+    * {
+      overflow-x: visible !important;
+      touch-action: auto;
+    }
+    #toast-wrapper {
+      display: none;
     }
   }
 
-  #navbar-landscape {
-    display: flex;
-  }
+  @media screen and (orientation: landscape) {  
+    #navbar-landscape {
+      display: flex;
+    }
 
-  #navbar-portrait {
-    display: none;
+    #navbar-portrait {
+      display: none;
+    }
   }
 
   nav {
@@ -158,9 +152,10 @@
   }
 
   .title-portrait {
-    width: 50%;
+    width: 100%;
     height: 2em;
     font-size: 3em;
+    margin-left: 2%;
   }
 
   .button {
