--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,7 @@
   <script src="auth.js"></script>
 </head>
 
-<body>
+<body id="body">
   <nav id="navbar-landscape">
     <button class="title" style="color: white;" onclick="redirect('homepage')">CovidBot19</button>
 
@@ -109,7 +109,6 @@
     #navbar-landscape {
       display: flex;
     }
-
     #navbar-portrait {
       display: none;
     }
