restyled auth page

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,8 @@
   <script src="script.js"></script>
   <script src="apirequest.js"></script>
   <script src="auth.js"></script>
+
+  <link rel="stylesheet" href="auth.css">
 </head>
 
 <body id="body">
