--- a/public/auth.html
+++ b/public/auth.html
@@ -6,7 +6,7 @@
             <div
                 class="mdl-card sis mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
 
-                <div class="mdl-card__title mdl-color--light-blue-600 mdl-color-text--white">
+                <div class="mdl-card__title mdl-color--red-600 mdl-color-text--white">
                     <h2 class="mdl-card__title-text">Sign In or Sign Up</h2>
                 </div>
 
