--- a/public/discord-landscape.html
+++ b/public/discord-landscape.html
@@ -31,7 +31,7 @@
                     stuff on multiple servers!</p>
                 <br>
                 <button class="btn btn-primary" style="background-color: tomato; border-color: tomato; margin-left: 1%; font-size: 20px;"
-                    onclick="window.open('https://discord.gg/Cg7E8ms')">Join our Discord server</button>
+                    onclick="window.open('')">Join our Discord server</button>
             </div>
         </div>
     </div>
