--- a/public/discord-portrait.html
+++ b/public/discord-portrait.html
@@ -29,7 +29,7 @@
                 <p class="card-text" style="font-size: 18px">Are you a developer? Want to learn more about this site? Need help? Or do you just
                     want to talk about coronavirus? Join our server!</p>
                 <button class="btn btn-primary" style="background-color: tomato; border-color: tomato; margin-left: 1%; font-size: 20px;"
-                onclick="window.open('https://discord.gg/Cg7E8ms')">Join our Discord server</button>
+                onclick="window.open('')">Join our Discord server</button>
             </div>
         </div>
     </div>
